ux: Add styling to shop hero and categories sections

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
     <div class="wrapper x-constraint">
       <h2 class="h2">Attractions</h2>
       <div class="attractions">
-        <div class="attraction">
+        <div class="card">
           <a href="/attractions/chocolate-fondue-ride">
             <img
               src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_360/v1656039885/wm-theme-park/itai-aarons-PeY2eePim3Q-unsplash_jgaup2.jpg"
@@ -74,7 +74,7 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
           </p>
         </div>
-        <div class="attraction">
+        <div class="card">
           <img
             src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_600/v1656039885/wm-theme-park/philipp-potocnik-nmVzQqgl-pc-unsplash_acn5ab.jpg"
             alt="Image of ride with colourful elephant cars"
@@ -84,7 +84,7 @@
             Neque porro quisquam est, qui dolorem ipsum, quia dolor sit amet.
           </p>
         </div>
-        <div class="attraction">
+        <div class="card">
           <img
             src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_600/v1656039885/wm-theme-park/reki-woo-1GQ8mmT_mxs-unsplash_xbiwft.jpg"
             alt="Image of factory door entrance with big mouth overtop the door"
