--- a/public/shop/index.html
+++ b/public/shop/index.html
@@ -27,41 +27,47 @@
     </nav>
 
     <main>
-      <header>
+      <header class="banner">
         <div class="hero x-constraint">
-          <h1>Candyland Shop</h1>
+          <h1 class="h1">Candyland Shop</h1>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
           </p>
         </div>
       </header>
 
+      <!-- Categories of shops section -->
       <section id="categories">
         <div class="wrapper x-constraint">
-          <div class="category">
+          <div class="card">
             <img
-              src="https://via.placeholder.com/200x200.png"
+              src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_400/v1656045199/wm-theme-park/bill-nino-alyjAglbnF0-unsplash_rpkqth.jpg"
+              alt="Image of candy in containers"
+            >
+            <h3>Candies</h3>
+            <p>Category description</p>
+          </div>
+          <div class="card">
+            <img src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_400/v1656046316/wm-theme-park/june-gathercole-CDt2jVuSkh4-unsplash_kjpwxz.jpg"
+              alt="Close-up image of fluffy white and pink unicorns"
+            >
+            <h3 class="h3">Toys</h3>
+            <p>Category description</p>
+          </div>
+          <div class="card">
+            <img
+              src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_400/v1656046083/wm-theme-park/martin-adams-zbPDL84kvRg-unsplash_bokoem.jpg"
+              alt="Colourful shoes on a rack"
+            >
+            <h3 class="h3">Apparel</h3>
+            <p>Category description</p>
+          </div>
+          <div class="card">
+            <img
+              src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_400/v1656046418/wm-theme-park/ulysse-pointcheval-1WmlAiYgnoI-unsplash_fgleqj.jpg"
               alt="Placeholder for category image"
             >
-            <h3>Treats</h3>
-            <p>Category description</p>
-          </div>
-          <div class="category">
-            <img
-              src="https://via.placeholder.com/200x200.png"
-              alt="Placeholder for category image"
-            >
-            <h3>Apparel</h3>
-            <p>Category description</p>
-          </div>
-          <div class="category">
-            <img src="https://via.placeholder.com/200x200.png" alt="Placeholder for category image">
-            <h3>Toys</h3>
-            <p>Category description</p>
-          </div>
-          <div class="category">
-            <img src="https://via.placeholder.com/200x200.png" alt="Placeholder for category image">
-            <h3>Cards</h3>
+            <h3 class="h3">Baked goods</h3>
             <p>Category description</p>
           </div>
         </div>
