ux: Add active states to navbar items

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   <div class="content x-constraint">
     <div class="flex-grow">
       <a class="logo-font" href="/">Candyland</a>
-      <a href="/">Home</a>
+      <a href="/" class="active">Home</a>
       <span class="disabled-link">Attractions</span>
       <span class="disabled-link">Tickets</span>
       <a href="/shop">Shop</a>
