--- a/public/shop/index.html
+++ b/public/shop/index.html
@@ -19,7 +19,7 @@
           <a href="/">Home</a>
           <span class="disabled-link">Attractions</span>
           <span class="disabled-link">Tickets</span>
-          <a href="/shop">Shop</a>
+          <a href="/shop" class="active">Shop</a>
         </div>
         <span>Profile</span>
         <button>Contact us</button>
