ux: Finish styling Shop page

--- a/public/shop/index.html
+++ b/public/shop/index.html
@@ -22,7 +22,7 @@
           <a href="/shop" class="active">Shop</a>
         </div>
         <span>Profile</span>
-        <button>Contact us</button>
+        <button class="outlined-button">Contact us</button>
       </div>
     </nav>
 
@@ -44,7 +44,7 @@
               src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_400/v1656045199/wm-theme-park/bill-nino-alyjAglbnF0-unsplash_rpkqth.jpg"
               alt="Image of candy in containers"
             >
-            <h3>Candies</h3>
+            <h3 class="h3">Candies</h3>
             <p>Category description</p>
           </div>
           <div class="card">
@@ -75,7 +75,7 @@
 
       <section id="promotions">
         <div class="wrapper x-constraint">
-          <h3>Promotions</h3>
+          <h2 class="h2">Get 50% off your seasons ticket!</h2>
           <p>
             Neque porro quisquam est, qui dolorem ipsum, quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt.
           </p>
@@ -84,26 +84,35 @@
 
       <section id="category">
         <div class="wrapper x-constraint">
-          <h2>Shop category</h2>
+          <h2 class="h2">Featured products</h2>
           <div class="products-row">
-            <div class="product-card">
-              <img src="https://via.placeholder.com/300x400.png" alt="Placeholder for product image">
-              <h3>
-                Product 1 name
+            <div class="card">
+              <img
+                src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_400/v1656047590/wm-theme-park/billow926-dSpN8Zi5BIg-unsplash_pslxrm.jpg"
+                alt="Placeholder for product image"
+              >
+              <h3 class="h3">
+                Belly Jellies
               </h3>
               <p>In culpa qui officia deserunt mollit</p>
             </div>
-            <div class="product-card">
-              <img src="https://via.placeholder.com/300x400.png" alt="Placeholder for product image">
-              <h3>
-                Product 2 name
+            <div class="card">
+              <img
+                src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_400/v1656047593/wm-theme-park/henry-becerra-u1ghoiho43g-unsplash_vk5cue.jpg"
+                alt="Placeholder for product image"
+              >
+              <h3 class="h3">
+                Chocoholic's delight
               </h3>
               <p>Do eiusmod tempor incididunt ut labore</p>
             </div>
-            <div class="product-card">
-              <img src="https://via.placeholder.com/300x400.png" alt="Placeholder for product image">
-              <h3>
-                Product 3 name
+            <div class="card">
+              <img
+                src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_400/v1656047777/wm-theme-park/bruna-branco-2UfJPzlEKqg-unsplash_k5he4f.jpg"
+                alt="Placeholder for product image"
+              >
+              <h3 class="h3">
+                Toffee Pops
               </h3>
               <p>Quis autem vel eum iure reprehenderit</p>
             </div>
