ux: Restore colour to links on landing page

--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
               src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_360/v1656039885/wm-theme-park/itai-aarons-PeY2eePim3Q-unsplash_jgaup2.jpg"
               alt="Image of people going down a steep roller coaster"
             >
-            <h3 class="h3">Chocolate Fondue Rollercoaster</h3>
+            <h3 class="h3 text-link">Chocolate Fondue Rollercoaster</h3>
           </a>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
