ux: Add alt text for shop page images

--- a/public/shop/index.html
+++ b/public/shop/index.html
@@ -89,7 +89,7 @@
             <div class="card">
               <img
                 src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_400/v1656047590/wm-theme-park/billow926-dSpN8Zi5BIg-unsplash_pslxrm.jpg"
-                alt="Placeholder for product image"
+                alt="Close up image of candies"
               >
               <h3 class="h3">
                 Belly Jellies
@@ -99,7 +99,7 @@
             <div class="card">
               <img
                 src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_400/v1656047593/wm-theme-park/henry-becerra-u1ghoiho43g-unsplash_vk5cue.jpg"
-                alt="Placeholder for product image"
+                alt="Close up image of chocolates"
               >
               <h3 class="h3">
                 Chocoholic's delight
@@ -109,7 +109,7 @@
             <div class="card">
               <img
                 src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_400/v1656047777/wm-theme-park/bruna-branco-2UfJPzlEKqg-unsplash_k5he4f.jpg"
-                alt="Placeholder for product image"
+                alt="Image of toffee baked goods on a table"
               >
               <h3 class="h3">
                 Toffee Pops
