ux: Add image and styling to attraction page hero

--- a/public/attractions/chocolate-fondue-ride/index.html
+++ b/public/attractions/chocolate-fondue-ride/index.html
@@ -11,7 +11,7 @@
     <!-- Link to favicon -->
   </head>
   <body>
-  <!-- Menu bar -->
+    <!-- Menu bar -->
     <nav class="navbar">
       <div class="content x-constraint">
         <div class="flex-grow">
@@ -22,15 +22,15 @@
           <a href="/shop">Shop</a>
         </div>
         <span>Profile</span>
-        <button>Contact us</button>
+        <button class="outlined-button">Contact us</button>
       </div>
     </nav>
 
     <main>
       <header class="attraction-hero">
-        <div class="content x-constraint">
-          <h1>Chocolate Fondue Ride</h1>
-          <div class="quote-wrapper">
+        <div class="wrapper">
+          <div class="content x-constraint">
+            <h1 class="h1">Chocolate Fondue Ride</h1>
             <div class="quote">
               <blockquote>
                 The chocolatey thrill of a lifetime!
