--- a/public/attractions/chocolate-fondue-ride/index.html
+++ b/public/attractions/chocolate-fondue-ride/index.html
@@ -43,11 +43,30 @@
       <section id="attraction-overview">
         <div class="content x-constraint">
           <div id="attraction-restrictions">
-            <span>Thrill level: Scary!</span>
-            <span>Age: 10 and up</span>
-            <span>Height: 120 cm and up</span>
+            <div class="stat">
+              <!-- Flame icon: Heroicons.com -->
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20" fill="currentColor">
+                <path fill-rule="evenodd" d="M12.395 2.553a1 1 0 00-1.45-.385c-.345.23-.614.558-.822.88-.214.33-.403.713-.57 1.116-.334.804-.614 1.768-.84 2.734a31.365 31.365 0 00-.613 3.58 2.64 2.64 0 01-.945-1.067c-.328-.68-.398-1.534-.398-2.654A1 1 0 005.05 6.05 6.981 6.981 0 003 11a7 7 0 1011.95-4.95c-.592-.591-.98-.985-1.348-1.467-.363-.476-.724-1.063-1.207-2.03zM12.12 15.12A3 3 0 017 13s.879.5 2.5.5c0-1 .5-4 1.25-4.5.5 1 .786 1.293 1.371 1.879A2.99 2.99 0 0113 13a2.99 2.99 0 01-.879 2.121z" clip-rule="evenodd" />
+              </svg>
+              <span class="h4">Thrill level:</span>
+              Scary!
+            </div>
+            <div class="stat">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20" fill="currentColor">
+                <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
+              </svg>
+              <span class="h4">Age:</span>
+              10 and up
+            </div>
+            <div class="stat">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20" fill="currentColor">
+                <path fill-rule="evenodd" d="M12 7a1 1 0 110-2h5a1 1 0 011 1v5a1 1 0 11-2 0V8.414l-4.293 4.293a1 1 0 01-1.414 0L8 10.414l-4.293 4.293a1 1 0 01-1.414-1.414l5-5a1 1 0 011.414 0L11 10.586 14.586 7H12z" clip-rule="evenodd" />
+              </svg>
+              <span class="h4">Height:</span>
+              120 cm and up
+            </div>
           </div>
-          <button id="tickets">Buy tickets</button>
+          <button id="tickets" class="primary-button">Buy tickets</button>
         </div>
       </section>
 
@@ -60,7 +79,8 @@
             </p>
             <div class="details">
               <ul>
-                <li>Duration: 8 minutes</li>
+                <li>
+                  <span class="bold">Duration:</span> 8 minutes</li>
                 <li>Cost: 16 tickets</li>
                 <li>Maximum speed: 20km/h</li>
               </ul>
