--- a/public/attractions/chocolate-fondue-ride/index.html
+++ b/public/attractions/chocolate-fondue-ride/index.html
@@ -31,11 +31,6 @@
         <div class="wrapper">
           <div class="content x-constraint">
             <h1 class="h1">Chocolate Fondue Ride</h1>
-            <div class="quote">
-              <blockquote>
-                The chocolatey thrill of a lifetime!
-              </blockquote>
-            </div>
           </div>
         </div>
       </header>
@@ -52,6 +47,7 @@
               Scary!
             </div>
             <div class="stat">
+              <!-- Star icon: Heroicons.com -->
               <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20" fill="currentColor">
                 <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
               </svg>
@@ -59,6 +55,7 @@
               10 and up
             </div>
             <div class="stat">
+              <!-- Upward chart icon: Heroicons.com -->
               <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20" fill="currentColor">
                 <path fill-rule="evenodd" d="M12 7a1 1 0 110-2h5a1 1 0 011 1v5a1 1 0 11-2 0V8.414l-4.293 4.293a1 1 0 01-1.414 0L8 10.414l-4.293 4.293a1 1 0 01-1.414-1.414l5-5a1 1 0 011.414 0L11 10.586 14.586 7H12z" clip-rule="evenodd" />
               </svg>
@@ -73,22 +70,24 @@
       <section id="attraction-description">
         <div class="content x-constraint">
           <div class="copy">
-            <h2>About the ride</h2>
+            <h2 class="h3">The chocolatey thrill of a lifetime!</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+              Donec pretium facilisis tempor. Integer tristique congue sollicitudin. Praesent lobortis, quam vel eleifend cursus, magna ante malesuada velit, ac commodo justo tellus ut sem. Aenean ut vulputate ligula. Aenean luctus fringilla metus at accumsan. Nulla nisi metus, sollicitudin a lorem sed, porta aliquam dolor. Ut ut fringilla ipsum. Duis vulputate aliquam ipsum, sit amet molestie magna egestas vestibulum. Sed sit amet nulla sapien. Nam nec erat non mauris consequat egestas non sed dui. Vivamus accumsan ligula ac metus consectetur, sed vulputate erat dictum. Suspendisse quis lacinia erat. Donec efficitur viverra turpis, a malesuada orci scelerisque nec.
             </p>
             <div class="details">
               <ul>
-                <li>
-                  <span class="bold">Duration:</span> 8 minutes</li>
-                <li>Cost: 16 tickets</li>
-                <li>Maximum speed: 20km/h</li>
+                <li><span class="h4">Duration:</span> 58 seconds</li>
+                <li><span class="h4">Cost:</span> 16 tickets</li>
+                <li><span class="h4">Maximum speed:</span> Mach 2</li>
               </ul>
             </div>
           </div>
           <figure>
-            <img src="https://via.placeholder.com/1200x200.png" alt="Placeholder for header image">
-            <figcaption>First-person perspective photo of the ride.</figcaption>
+            <img
+              src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_360/v1656039885/wm-theme-park/itai-aarons-PeY2eePim3Q-unsplash_jgaup2.jpg"
+              alt="Close-up of the ride"
+            >
+            <figcaption>Second-person perspective photo of the ride.</figcaption>
           </figure>
         </div>
       </section>
