ux: Standardize font sizes across pages

--- a/public/404.html
+++ b/public/404.html
@@ -7,6 +7,10 @@
     <!-- Link to favicon and stylesheets  -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/style.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cherry+Swash:wght@700&family=Lobster+Two:wght@400&family=Nunito:wght@500&display=swap"
+      rel="stylesheet"
+    >
     <!-- Link to favicon -->
   </head>
   <body>
