content: Add whimsical copy to Shop page

--- a/public/shop/index.html
+++ b/public/shop/index.html
@@ -34,7 +34,10 @@
         <div class="hero x-constraint">
           <h1 class="h1">Candyland Shop</h1>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+            For every member of the Candyland family, anywhere in the world.
+          </p>
+          <p>
+            The Candyland Shop has toys, clothing, gift cards, yummy treats, and more!
           </p>
         </div>
       </header>
@@ -47,15 +50,15 @@
               src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_400/v1656045199/wm-theme-park/bill-nino-alyjAglbnF0-unsplash_rpkqth.jpg"
               alt="Image of candy in containers"
             >
-            <h3 class="h3">Candies</h3>
-            <p>Category description</p>
+            <h3 class="h3">Sweets</h3>
+            <p>Candyland goodies, delivered directly to your door. Sugar never tasted so sweet</p>
           </div>
           <div class="card">
             <img src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_400/v1656046316/wm-theme-park/june-gathercole-CDt2jVuSkh4-unsplash_kjpwxz.jpg"
               alt="Close-up image of fluffy white and pink unicorns"
             >
             <h3 class="h3">Toys</h3>
-            <p>Category description</p>
+            <p>Plushies, sugarisers, and your favourite theme-park replicas&mdash;including the Chocolate Fondue ride!</p>
           </div>
           <div class="card">
             <img
@@ -63,7 +66,7 @@
               alt="Colourful shoes on a rack"
             >
             <h3 class="h3">Apparel</h3>
-            <p>Category description</p>
+            <p>If you care less about style and more about making an impression, we recommend Candyland togs for everyone on your gift list</p>
           </div>
           <div class="card">
             <img
@@ -71,14 +74,14 @@
               alt="Placeholder for category image"
             >
             <h3 class="h3">Baked goods</h3>
-            <p>Category description</p>
+            <p>Try our strawberry tarts, chocobomb clusters, and the world-famous edible Candyland Elf (guaranteed fresh for up to 6 months)</p>
           </div>
         </div>
       </section>
 
       <section id="promotions">
         <div class="wrapper x-constraint">
-          <h2 class="h2">Get 50% off your seasons ticket!</h2>
+          <h2 class="h2">Get 50% off your season ticket!</h2>
           <p>
             Neque porro quisquam est, qui dolorem ipsum, quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt.
           </p>
