ux: Alt tags contain redundant "Image of" text

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     <img
       class="header"
       src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_2000/v1656039885/wm-theme-park/oleg-didenko-LCm6u4DD-4w-unsplash_i1otap.jpg"
-      alt="Image of colourful buildings overlooking a pond"
+      alt="Colourful buildings overlooking a pond"
     >
     <div class="content">
       <div class="x-constraint">
@@ -66,7 +66,7 @@
           <a href="/attractions/chocolate-fondue-ride">
             <img
               src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_360/v1656039885/wm-theme-park/itai-aarons-PeY2eePim3Q-unsplash_jgaup2.jpg"
-              alt="Image of people going down a steep roller coaster"
+              alt="People going down a steep roller coaster"
             >
             <h3 class="h3 text-link">Chocolate Fondue Rollercoaster</h3>
           </a>
@@ -77,7 +77,7 @@
         <div class="card">
           <img
             src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_600/v1656039885/wm-theme-park/philipp-potocnik-nmVzQqgl-pc-unsplash_acn5ab.jpg"
-            alt="Image of ride with colourful elephant cars"
+            alt="Ride with colourful elephant cars"
           >
           <h3 class="h3">Gummy Elephants Ride</h3>
           <p>
@@ -87,7 +87,7 @@
         <div class="card">
           <img
             src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_600/v1656039885/wm-theme-park/reki-woo-1GQ8mmT_mxs-unsplash_xbiwft.jpg"
-            alt="Image of factory door entrance with big mouth overtop the door"
+            alt="Factory door entrance with big mouth overtop the door"
           >
           <h3 class="h3">Candyland Factory Tour</h3>
           <p>
