--- a/public/shop/index.html
+++ b/public/shop/index.html
@@ -48,7 +48,7 @@
           <div class="card">
             <img
               src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_400/v1656045199/wm-theme-park/bill-nino-alyjAglbnF0-unsplash_rpkqth.jpg"
-              alt="Image of candy in containers"
+              alt="Candy in containers"
             >
             <h3 class="h3">Sweets</h3>
             <p>Candyland goodies, delivered directly to your door. Sugar never tasted so sweet</p>
@@ -115,7 +115,7 @@
             <div class="card">
               <img
                 src="https://res.cloudinary.com/db8eidwqd/image/upload/c_scale,w_400/v1656047777/wm-theme-park/bruna-branco-2UfJPzlEKqg-unsplash_k5he4f.jpg"
-                alt="Image of toffee baked goods on a table"
+                alt="Toffee baked goods on a table"
               >
               <h3 class="h3">
                 Toffee Pops
